feature:clean-text-review-column

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,10 +430,217 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data Cleaning: \n",
-    "# 1. Need to solve date time problem\n",
-    "# 2. Need to solve null data on Rating columns\n",
-    "# 3. Need to verify \"No Review Text\" on Review Column"
+    "'''\n",
+    "    The main focus analysis: \n",
+    "    1. Sentiment analysis from \"Review Text\":\n",
+    "        Step one: Data Cleaning. Need to verify \"No Review Text\" on Review Column\n",
+    "        Step two: Apply sentiment analysis\n",
+    "        \n",
+    "\n",
+    "\n",
+    "Data Cleaning issues for more analysis:\n",
+    "    2. Need to solve null data on Rating columns (This is interesting if I want to understand the average rating or the region in which people are giving Starbucks the most excellent ratings)\n",
+    "    \n",
+    "    3. Need to solve datetime problem (This will be necessary if I want to understand the evolution of feedback over the years.s)\n",
+    "\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cleaning \"No Review Text\" column. I will need those comments, so let's drop the rows with \"No Review Text\"\n",
+    "df_filtered = df[df[\"Review\"] == \"No Review Text\"]\n",
+    "len(df_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df[\"Review\"] != \"No Review Text\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>location</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Review</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Helen</td>\n",
+       "      <td>Wichita Falls, TX</td>\n",
+       "      <td>Reviewed Sept. 13, 2023</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Amber and LaDonna at the Starbucks on Southwes...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Courtney</td>\n",
+       "      <td>Apopka, FL</td>\n",
+       "      <td>Reviewed July 16, 2023</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>** at the Starbucks by the fire station on 436...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Daynelle</td>\n",
+       "      <td>Cranberry Twp, PA</td>\n",
+       "      <td>Reviewed July 5, 2023</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I just wanted to go out of my way to recognize...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Taylor</td>\n",
+       "      <td>Seattle, WA</td>\n",
+       "      <td>Reviewed May 26, 2023</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Me and my friend were at Starbucks and my card...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Tenessa</td>\n",
+       "      <td>Gresham, OR</td>\n",
+       "      <td>Reviewed Jan. 22, 2023</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I’m on this kick of drinking 5 cups of warm wa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>829</th>\n",
+       "      <td>Misty</td>\n",
+       "      <td>Lincoln, CA</td>\n",
+       "      <td>Reviewed July 17, 2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>I then decided to call and ask her for her ma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>830</th>\n",
+       "      <td>Mike</td>\n",
+       "      <td>New York, NY</td>\n",
+       "      <td>Reviewed July 14, 2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Walked into buy a cup of coffee today and the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>831</th>\n",
+       "      <td>Raudys</td>\n",
+       "      <td>Miami Beach, FL</td>\n",
+       "      <td>Reviewed July 13, 2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ordered two dopio machiato coffees, however I ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>832</th>\n",
+       "      <td>Lou</td>\n",
+       "      <td>Hackesnack, NJ</td>\n",
+       "      <td>Reviewed June 16, 2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>I stop at this Starbucks quite often.  They ha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>833</th>\n",
+       "      <td>Troy</td>\n",
+       "      <td>Denver, CO</td>\n",
+       "      <td>Reviewed June 14, 2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>i have been a starbucks customer for ten years...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>803 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name           location                     Date  Rating  \\\n",
+       "0       Helen  Wichita Falls, TX  Reviewed Sept. 13, 2023     5.0   \n",
+       "1    Courtney         Apopka, FL   Reviewed July 16, 2023     5.0   \n",
+       "2    Daynelle  Cranberry Twp, PA    Reviewed July 5, 2023     5.0   \n",
+       "3      Taylor        Seattle, WA    Reviewed May 26, 2023     5.0   \n",
+       "4     Tenessa        Gresham, OR   Reviewed Jan. 22, 2023     5.0   \n",
+       "..        ...                ...                      ...     ...   \n",
+       "829     Misty        Lincoln, CA   Reviewed July 17, 2008     NaN   \n",
+       "830      Mike       New York, NY   Reviewed July 14, 2008     NaN   \n",
+       "831    Raudys    Miami Beach, FL   Reviewed July 13, 2008     NaN   \n",
+       "832       Lou     Hackesnack, NJ   Reviewed June 16, 2008     NaN   \n",
+       "833      Troy         Denver, CO   Reviewed June 14, 2008     NaN   \n",
+       "\n",
+       "                                                Review  \n",
+       "0    Amber and LaDonna at the Starbucks on Southwes...  \n",
+       "1    ** at the Starbucks by the fire station on 436...  \n",
+       "2    I just wanted to go out of my way to recognize...  \n",
+       "3    Me and my friend were at Starbucks and my card...  \n",
+       "4    I’m on this kick of drinking 5 cups of warm wa...  \n",
+       "..                                                 ...  \n",
+       "829   I then decided to call and ask her for her ma...  \n",
+       "830  Walked into buy a cup of coffee today and the ...  \n",
+       "831  Ordered two dopio machiato coffees, however I ...  \n",
+       "832  I stop at this Starbucks quite often.  They ha...  \n",
+       "833  i have been a starbucks customer for ten years...  \n",
+       "\n",
+       "[803 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(-10)"
    ]
   },
   {
@@ -441,7 +648,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ok! first cleaning problem solved. I have 803 rows with reviews on it. For my first purpose: Sentiment Analysis\n"
+   ]
   }
  ],
  "metadata": {
