updated-library-imports

--- a/unsupervised-learning.ipynb
+++ b/unsupervised-learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\stiag\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,8 +23,6 @@
     "from langchain_community.document_loaders import DataFrameLoader\n",
     "from sklearn.metrics import silhouette_score\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.metrics import pairwise_distances\n",
-    "from sklearn.cluster import KMeans\n",
     "from sklearn.manifold import TSNE\n",
     "import matplotlib.pyplot as plt\n",
     "from sentence_transformers import SentenceTransformer\n",
@@ -43,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +215,7 @@
        "9                                      ['No Images']  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +419,7 @@
        "[840 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +444,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,16 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n    The main focus analysis: \\n    1. Sentiment analysis from \"Review Text\":\\n        Step one: Data Cleaning. Need to verify \"No Review Text\" on Review Column\\n        Step two: Apply sentiment analysis\\n\\n'"
+       "'\\n    The main focus analysis: \\n    1. Sentiment analysis from \"Review Text\":\\n        Step one: Data Cleaning. Need to verify \"No Review Text\" on Review Column\\n        Step two: Apply sentiment clustering (positive and negative) with unsupervised learning\\n\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,14 +474,14 @@
     "    The main focus analysis: \n",
     "    1. Sentiment analysis from \"Review Text\":\n",
     "        Step one: Data Cleaning. Need to verify \"No Review Text\" on Review Column\n",
-    "        Step two: Apply sentiment analysis\n",
+    "        Step two: Apply sentiment clustering (positive and negative) with unsupervised learning\n",
     "\n",
     "'''\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +490,7 @@
        "37"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +667,7 @@
        "[803 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -796,69 +785,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                        review_cleaned  cluster\n",
-      "0    amber and ladonna at the starbucks on southwes...        1\n",
-      "1    at the starbucks by the fire station on in alt...        0\n",
-      "2    i just wanted to go out of my way to recognize...        1\n",
-      "3    me and my friend were at starbucks and my card...        1\n",
-      "4    im on this kick of drinking cups of warm water...        1\n",
-      "..                                                 ...      ...\n",
-      "841  when using my debit card how much and for how ...        1\n",
-      "842  i just bought a starbucks thermos mug about a ...        1\n",
-      "844  im was a regular customer who ordered a latte ...        1\n",
-      "845  i ordered two venti frappacinos without whippe...        1\n",
-      "847  demanded tips from me then made me wait until ...        1\n",
-      "\n",
-      "[813 rows x 2 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\stiag\\AppData\\Local\\Temp\\ipykernel_19876\\2272153670.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_review_cleaned[\"cluster\"] = df_review_cleaned[\"cluster\"].astype(int)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#### Let's see if the clustering make sence\n",
-    "# Selecting \"cluster\" columns to True or False\n",
-    "\n",
-    "df_review_cleaned[\"cluster\"] = df_review_cleaned[\"cluster\"].astype(int)\n",
-    "print(df_review_cleaned)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_review_cleaned[\"cluster\"].unique())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -868,10 +794,10 @@
      "text": [
       "\n",
       "🔴 Cluster NEGATIVE examples:\n",
-      "['with all the talk in the news about torture i decided to google a video on waterboarding sadly the first thing i see is an ad for starbucks its very disturbing to see these images affiliated with starbucks please be more selective about where you spam people', 'i am suffering from a health condition where i cannot have cheese in my sandwich as starbucks has no no cheese sandwich option i usually ask the serving barista to remove the cheese from the sandwich before heating it up this starbucks is located in university blvd w at jacksonville fl the barista did not want to remove the cheese and when i asked her nicely to do so she started mocking me like a year old kid except in a psychotic way then to top it all she literally destroyed my chicken sandwich just because i asked her nicely to take the cheese off', 'i found the coffee at starbucks overrated and taste as survey was bitter i have to comment about bp and speedway gas stations they have got good coffee i mean you can wrap your hand around a good tasting cup of coffee i believe everybody has improved on their coffee they sell whether its either store bought or ready made', 'i was at store and was waiting waiting and waiting for my wifes drink and finally i opened my mouth i called to speak to the manager and she gives the excuse everyone is helping each other garbage they have people on the drive through and one person helping people that walk in she is a very poor manager does not know the first thing about customer service or selling she is poor', 'again after weeks again went to the starbucks close by to get a coffee i had been there more often before but because the starbucks around me offering boiled and muddy coffee i have avoided going there today again i went there i asked if it is fresh she said just made it yes it is fresh then had to get the last drop off the container poured in the cup and gave it to me it was so muddy and bad taste so i threw it away i had paid already her manager was there but didnt allow barista to brew fresh coffee']\n",
+      "['i am very good customer for the starbucks i went to starbucks everyday but today one of the employee is very rude in his behavior i asked him can i fresh coffee is it wrong he served to me bad coffee', 'i thought a global brand as starbucks setting extremely high beverages prices would be at least concern about their reputation quality and hygiene yesterday morning i decided to get the cold lemon mint drink from starbucks branch in city stars mall in cairo egypt as i was drinking my stomach started to get upset i checked to find out living worms in my drink', 'i am very upset with my experience today i ordered a americana at the drive through at a very slow time i paid lady with app and then she disappeared i waited extra long and then a man came and handed me my drink after someone else was behind me on the drive through when i picked up my drink for first time while driving the lid popped off and the coffee spilled on my hand burning it my lap my envelope i was mailing with a check my car and car seat i am lucky i did not get into an accident i called store and spoke with manager to tell her what happened i am very offended by her response she said sorry and explained how it could not possibly be their fault because they triple check the lid obviously they did not and i should not have had to argue with her', 'i entered that specific store at w and ave in manhattan and before queuing ive asked the manager if they were serving coffee press to share as it is advertised he said yes sir so i waited after charging me instead of he showed me the french press and ive said that it was too small for two he said oh no sir this is the press we normally use of course the press was too small it was only for half a tall cup so he ordered the other guy to make another one but first theyve poured the coffee into a cardboard cup because they said that was the only press they had so the coffee was terrible mine was cold and tasted like petrol my partners was like a strong tea and to end it up i went to the restroom which is dirty smelly and worst of all with no soap at all please if you like coffee and you like starbucks dont you ever go to the one in the w and ave in manhattan never', 'i have been going to this star bucks by miller park for several years spending anywhere from a day every day just a little addicted i know the manager there john he is a train wreck after being there for months he made my last drink i threw them in the trash i called his district manager julie several times about weeks ago i ran into her at the store and talked with her here he was asking his employees how to work the safe hello he has been there almost a year and still dont know the safe any who i was there yesterday there were people on one lady was pacing while waiting cause she was going to be late for work another asked why such a long wait another walked out without their drink and i as well walked out without my drink after paying for it because i had waited minutes for a cup of coffee and i had an appointment i had to get to it is horrible i wish someone would just do something about this and take the customers complaints seriously']\n",
       "\n",
       "🟢 Cluster POSITIVE examples:\n",
-      "['i was going to starbucks for years approx the st in sawgrass mills mall sunrise fl nothing beats the drinks i will say that but i would buy every saturday cookies and they were nice size and delicious but then around years ago they got smaller and smaller and stop buying them i went to a new starbucks in plantation florida on sunrise boulevard they just opened up last week i looked at all their food their muffins are so small and their cookies are so tiny you guys should be embarrassed and thats with a capital embarrassed one of the employees heard me say you guys should be embarrassed and he nodded with his head upanddown not saying a word he agreed with me i will never go to your store again if i could rate your store experience a minus one store i would', 'i love the starbucks on sunset the new one on elms springs isnt quite there yet friendly which is amazing just they dont quite have it down yet my daughter and i went there yesterday and it was watery and not as nearly wonderful so we will go the extra miles to go to the one that knows what they are doing our money is just as important as your money', 'very stale egg product in sandwich unusually weak coffee unlike most starbucks very crowded store staff overwhelmed go to caribou coffee instead they need to test their products for freshness on a daily basis', 'starbucks does a great job of getting to know its repeat customers their regular orders and calling them by name they make you feel like a valued customer', 'the starbucks on newman lasalle quebec has the best customer service anywhere i go by there every other day before noon to get a coffee or a sandwich and the person at the window is such a delight to deal with along with all other employees they are friendly helpful and always have a great attitude hats off to them']\n"
+      "['on my birthday i got some treats at starbucks i wanted to get coffee but the staff help me choose something better green tea latte they were very kind and helpful which contributed to my birthday the latte was also really good my first green tea latte', 'it was a good introduction to the world of coffee beyond folgers now i brew my own from gourmet coffees obtained online and elsewhere i sometimes stop at a local kiosk ive pretty much stopped going to starbucks', 'starbucks is getting more and more pricey for a bad cup of whatever you drink everyone is sucked into this need to spend half your paycheck for a bad cup of joe just because its trendy the quality of service and product has drop over the years but the price keeps going up up up i am coming from a place where i see my wife spend hundreds a month on her favorite a chai tea the thing that gets me is they never ever get it right when she orders ever percent of the time they forget to put the whip cream on even when she says dont forget the whip cream or it will come warm not hot think about it a drink that cost you think you could at least make it right just so done with paying their prices for a sub par at best drink', 'i have been going to this store regularly for years the last year has been almost daily it is a very busy store but they move us through quickly it seems like the employees all get along and do their jobs efficiently and curiously one day a slight mistake was made and could have been my error due to the fact i usually have a large order but a very nice young lady stephanie took care of it with a smile if i need coffee i will wait to drive to this store the manager elaina is always working with a smile maybe that is why her employees treat us all that way these days it is hard to find good customer service but to find exceptional service is even better thank you to stephanie and the whole crew great job elaina', 'i love the starbucks on sunset the new one on elms springs isnt quite there yet friendly which is amazing just they dont quite have it down yet my daughter and i went there yesterday and it was watery and not as nearly wonderful so we will go the extra miles to go to the one that knows what they are doing our money is just as important as your money']\n"
      ]
     }
    ],
@@ -921,7 +847,6 @@
    ],
    "source": [
     "#Ok, so I have checked by my own and it doesn't sound correct. So right now, I am going to recheck calculating the silhouette score\n",
-    "\n",
     "score = silhouette_score(X, df_review_cleaned[\"cluster\"])\n",
     "print(f\"Silhouette Score: {score}\")\n",
     "\n",
@@ -1624,10 +1549,10 @@
      "text": [
       "\n",
       "🔴 Cluster NEGATIVE examples:\n",
-      "['i added money to my starbucks rewards card two days in a row in store it has been days and i have contacted customer service several times the customer service automated number is useless if i cannot speak to a real person the corporate office finally gave me a person sadly the issues is not resolved on their end how is it possible for such bad customer service for such a huge company']\n",
+      "['had a few bad experiences at a local starbucks out of the last drinks were wrong so i wrote a complaint to starbucks customer relations about a day later i got an email that even said they would look into the service at at location about weeks later i got a letter and free drink cards sent i definitely think its a step in the right directions some locations have offered great service and this location continued to provide subpar even at times bad service the reply although wont fix the location its a hope it might and definitely more than i have ever received from mcdonalds the s of times ive complaint about a particular location primarily the one right next to my house so yes all in all the overall customer service i have received from starbucks have been positive attached the letter and coupons had to cut of the top half of the letter because my name is in it and unfortunately it also cropped out the starbucks header']\n",
       "\n",
       "🟢 Cluster POSITIVE examples:\n",
-      "['im a starbucks junkie absolutely great customer service at each location ive visited expensive but you get what you pay for kudos to mr schultz for his continual brilliance']\n"
+      "['best crew ever at wade hampton greer south carolina awesome group of people friendly clean and best coffee anywhere']\n"
      ]
     }
    ],
