--- a/unsupervised-learning.ipynb
+++ b/unsupervised-learning.ipynb
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1304,7 @@
     "# Transforming embeddings in array\n",
     "X = np.array(df[\"sbert-embedding\"].tolist())\n",
     "\n",
-    "# Applying K-means once again and insert the column \"cluster\" into de dataframe\n",
+    "# Applying K-means once again and insert the column with the new \"cluster\" into de dataframe\n",
     "kmeans = KMeans(n_clusters=2, random_state=42)\n",
     "df[\"cluster\"] = kmeans.fit_predict(X)\n",
     "\n"
