--- a/unsupervised-learning.ipynb
+++ b/unsupervised-learning.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\stiag\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +224,7 @@
        "9                                      ['No Images']  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +428,7 @@
        "[840 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +453,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +473,7 @@
        "'\\n    The main focus analysis: \\n    1. Sentiment analysis from \"Review Text\":\\n        Step one: Data Cleaning. Need to verify \"No Review Text\" on Review Column\\n        Step two: Apply sentiment clustering (positive and negative) with unsupervised learning\\n\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +499,7 @@
        "37"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +676,7 @@
        "[803 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +729,7 @@
     "    text = text.lower()  # lower case\n",
     "    text = re.sub(r'http\\S+', '', text)  # remove links\n",
     "    text = re.sub(r'@\\w+', '', text)  # remove mentions\n",
-    "    text = re.sub(r'#\\w+', '', text)  # remove hashtags\n",
+    "    text = re.sub(r'#\\w+', '', text) # remove hashtags\n",
     "    text = re.sub(r'[^a-záéíóúâêîôûãõç\\s]', '', text)  # remove simbols, ponctuation and emojis\n",
     "    text = re.sub(r'\\s+', ' ', text)  # removes a lot of whitespace\n",
     "    return text.strip()\n",
@@ -734,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -794,10 +803,10 @@
      "text": [
       "\n",
       "🔴 Cluster NEGATIVE examples:\n",
-      "['i am very good customer for the starbucks i went to starbucks everyday but today one of the employee is very rude in his behavior i asked him can i fresh coffee is it wrong he served to me bad coffee', 'i thought a global brand as starbucks setting extremely high beverages prices would be at least concern about their reputation quality and hygiene yesterday morning i decided to get the cold lemon mint drink from starbucks branch in city stars mall in cairo egypt as i was drinking my stomach started to get upset i checked to find out living worms in my drink', 'i am very upset with my experience today i ordered a americana at the drive through at a very slow time i paid lady with app and then she disappeared i waited extra long and then a man came and handed me my drink after someone else was behind me on the drive through when i picked up my drink for first time while driving the lid popped off and the coffee spilled on my hand burning it my lap my envelope i was mailing with a check my car and car seat i am lucky i did not get into an accident i called store and spoke with manager to tell her what happened i am very offended by her response she said sorry and explained how it could not possibly be their fault because they triple check the lid obviously they did not and i should not have had to argue with her', 'i entered that specific store at w and ave in manhattan and before queuing ive asked the manager if they were serving coffee press to share as it is advertised he said yes sir so i waited after charging me instead of he showed me the french press and ive said that it was too small for two he said oh no sir this is the press we normally use of course the press was too small it was only for half a tall cup so he ordered the other guy to make another one but first theyve poured the coffee into a cardboard cup because they said that was the only press they had so the coffee was terrible mine was cold and tasted like petrol my partners was like a strong tea and to end it up i went to the restroom which is dirty smelly and worst of all with no soap at all please if you like coffee and you like starbucks dont you ever go to the one in the w and ave in manhattan never', 'i have been going to this star bucks by miller park for several years spending anywhere from a day every day just a little addicted i know the manager there john he is a train wreck after being there for months he made my last drink i threw them in the trash i called his district manager julie several times about weeks ago i ran into her at the store and talked with her here he was asking his employees how to work the safe hello he has been there almost a year and still dont know the safe any who i was there yesterday there were people on one lady was pacing while waiting cause she was going to be late for work another asked why such a long wait another walked out without their drink and i as well walked out without my drink after paying for it because i had waited minutes for a cup of coffee and i had an appointment i had to get to it is horrible i wish someone would just do something about this and take the customers complaints seriously']\n",
+      "['recently i have gone to your starbucks at barry rd in kansas city mo and most of the employees are professional and nice to deal with a certain brittney with a bad attitude most of the time remarked to me well you never tip us in the most hateful way and in front of two other female employees too it was quite embarrassing for me', 'we ordered online paid but they lost order so i had to reorder pay while my daughter tried to get her refund from first order then they mangled the order she requested a caramel macchiato but they didnt mix it caramel sat on bottom they just poured milk in it i ordered strawberry refresher with extra strawberry somehow they made it slightly bitter i heard them express to a man that waited for min for plain black coffee that they where trying but didnt really know how to make coffee seriously this terrible dont go to mad river store near dayton mall they suck', 'this is the first time i go to this store located in bristol and th st in santa ana california the staff was rude not a smile very short it is pretty evident that they were not trained for customer service the floor was very filthy it looked like it wasnt cleaned in several days it was dirty and coffee stains everywhere we had to clean our table because it was dirty like the rest of the tables my wife went to the restroom she had to do her business standing up because it was so dirty that she didnt dare to sit on the toilet i will never go back to this store and maybe to starbucks', 'seattle is your home town so your representation at the airport should give travelers a good impression instead at the seatac airport all of the franchise stores are total losers the coffee drinks are mediocre at best but the absolute worst things are the inedible edibles the scones etc are simply awful and do not live up to the starbucks promise of more healthful goodies there is a definite improvement in your own stores but these airport franchises are awful either take them back or demand better quality ps my husband and i are longtime shareholders so this is important to us', 'i came lots of to starbucks opposite grand hyatt in san francisco last time they got extremely horrible barista and then i did not come a while today i came back because i love this place and hopefully something is changing in contrast i had been the worse customer service in my whole life and the barista is is there discrimination with whom is tough speaking english as me and hated asian person']\n",
       "\n",
       "🟢 Cluster POSITIVE examples:\n",
-      "['on my birthday i got some treats at starbucks i wanted to get coffee but the staff help me choose something better green tea latte they were very kind and helpful which contributed to my birthday the latte was also really good my first green tea latte', 'it was a good introduction to the world of coffee beyond folgers now i brew my own from gourmet coffees obtained online and elsewhere i sometimes stop at a local kiosk ive pretty much stopped going to starbucks', 'starbucks is getting more and more pricey for a bad cup of whatever you drink everyone is sucked into this need to spend half your paycheck for a bad cup of joe just because its trendy the quality of service and product has drop over the years but the price keeps going up up up i am coming from a place where i see my wife spend hundreds a month on her favorite a chai tea the thing that gets me is they never ever get it right when she orders ever percent of the time they forget to put the whip cream on even when she says dont forget the whip cream or it will come warm not hot think about it a drink that cost you think you could at least make it right just so done with paying their prices for a sub par at best drink', 'i have been going to this store regularly for years the last year has been almost daily it is a very busy store but they move us through quickly it seems like the employees all get along and do their jobs efficiently and curiously one day a slight mistake was made and could have been my error due to the fact i usually have a large order but a very nice young lady stephanie took care of it with a smile if i need coffee i will wait to drive to this store the manager elaina is always working with a smile maybe that is why her employees treat us all that way these days it is hard to find good customer service but to find exceptional service is even better thank you to stephanie and the whole crew great job elaina', 'i love the starbucks on sunset the new one on elms springs isnt quite there yet friendly which is amazing just they dont quite have it down yet my daughter and i went there yesterday and it was watery and not as nearly wonderful so we will go the extra miles to go to the one that knows what they are doing our money is just as important as your money']\n"
+      "['starbucks on the ave in the udistrict is a big a for our community their service food and beverages are top of the line i love going in there to have some coffee and sometimes food and visit with friends', 'i usually receive great service ive only tried a few of their food items and they were ok nothing to write home about normally i just get coffee or tea', 'me and my special needs son need to wait at a starbucks for an access van the store has only teeny tiny tables where two people can not sit at as the table is far too small and round so the tables can not be joined the staff told me starbucks is making it extremely uncomfortable for a family to eat inside and difficult for couples people with special needs basically everyone the table is a little bigger than a stool i was told the staff and many complained though corporate office stated to them star bucks is not a family friendly place not a place for a group of people to meet they said the corporate office said despite the complaints the tiny tables stay', 'i know a lot of people line up for this stuff but the coffee is not that good i guess thats why they put in so many flavorings and sweeteners if you like just coffee try somewhere else many to choose from i wont name them here this is not an advertisement', 'love the choices of hot and cold drinks theres enough variety on breakfast and lunch items to fit anyones palate customer service baristas are great efficient knowledgeable and get everything quickly done']\n"
      ]
     }
    ],
@@ -811,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +832,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1086,7 @@
        "[813 rows x 7 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1278,7 @@
        "[813 rows x 6 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1538,7 @@
        "[813 rows x 8 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,6 +1699,13 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
