supervised-models-learning-commit

--- a/unsupervised-learning.ipynb
+++ b/unsupervised-learning.ipynb
@@ -1702,10 +1702,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# I didn't get a great result, but this project was about trainning and learning!"
+   ]
   }
  ],
  "metadata": {
